Add Dropdown Menu

--- a/podfile
+++ b/podfile
@@ -9,4 +9,5 @@ target 'SuperPop' do
   pod 'SnapKit'
   pod 'SwiftyJSON'
 #  pod 'AEXML'
+  pod 'BTNavigationDropdownMenu', :git => 'https://github.com/PhamBaTho/BTNavigationDropdownMenu.git', :branch => 'swift-3.0'
 end
