--- a/podfile
+++ b/podfile
@@ -8,7 +8,7 @@ target 'SuperPop' do
   pod 'Alamofire'
   pod 'SnapKit'
   pod 'SwiftyJSON'
-  
+  pod 'Fuzi', '~> 1.0.0'  
   pod 'PKHUD', '~> 4.0'
   pod 'BTNavigationDropdownMenu', :git => 'https://github.com/PhamBaTho/BTNavigationDropdownMenu.git', :branch => 'swift-3.0'
 end
