--- a/podfile
+++ b/podfile
@@ -5,16 +5,21 @@ target 'SuperPop' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
+  pod 'ReachabilitySwift'
+  pod 'Device', '~> 3.0.0'
   pod 'Alamofire'
   pod 'SnapKit'
   pod 'SwiftyJSON'
   pod 'Fuzi', '~> 1.0.0'  
   pod 'PKHUD', '~> 4.0'
   pod 'BTNavigationDropdownMenu', :git => 'https://github.com/PhamBaTho/BTNavigationDropdownMenu.git', :branch => 'swift-3.0'
+  
 end
 
 target 'SuperPopToday' do
   use_frameworks!
+
   pod 'SwiftyJSON'  
   pod 'Alamofire'
+
 end
