--- a/SuperPop/Info.plist
+++ b/SuperPop/Info.plist
@@ -23,7 +23,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.0</string>
+	<string>1.1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -34,9 +34,9 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string></string>
+	<string>请允许本程序访问您的相机，随后您也可以在系统设置中随时修改。</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string></string>
+	<string>请允许本程序读取您的相册，随后您也可以在系统设置中随时修改。</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
