--- a/podfile
+++ b/podfile
@@ -1,25 +1,21 @@
-# Uncomment the next line to define a global platform for your project
 platform :ios, '8.0'
+use_frameworks!
 
-target 'SuperPop' do
-  # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
-  use_frameworks!
-
-  pod 'ReachabilitySwift'
-  pod 'Device', '~> 3.0.0'
-  pod 'Alamofire'
+def shared_pods
   pod 'SnapKit'
   pod 'SwiftyJSON'
+  pod 'Alamofire'
+end
+
+target 'SuperPop' do
+  shared_pods
+  pod 'ReachabilitySwift'
+  pod 'Device', '~> 3.0.0'
   pod 'Fuzi', '~> 1.0.0'  
   pod 'PKHUD', '~> 4.0'
   pod 'BTNavigationDropdownMenu', :git => 'https://github.com/PhamBaTho/BTNavigationDropdownMenu.git', :branch => 'swift-3.0'
-  
 end
 
 target 'SuperPopToday' do
-  use_frameworks!
-
-  pod 'SwiftyJSON'  
-  pod 'Alamofire'
-
+  shared_pods
 end
